# JPIO

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
jpio/: main.py
jpio/commands/: add.py  new.py  scan.py  security.py  test.py
jpio/core/: analyzer.py  generator.py  java_parser.py  models.py  security_analyzer.py  security_generator.py  test_generator.py  test_plan_analyzer.py  writer.py
jpio/templates/config/: swagger_config.java.j2
jpio/templates/entity/: controller.java.j2  dto.java.j2  entity.java.j2  enum.java.j2  mapper.java.j2  not_found_exception.java.j2  repository.java.j2  request_dto.java.j2  response_dto.java.j2  service.java.j2  service_impl.java.j2
jpio/templates/exception/: global_exception_handler.java.j2
jpio/templates/project/: application.properties.j2  application.yaml.j2
jpio/templates/security/: auth_controller.java.j2  auth_response_dto.java.j2  jwt.properties.j2  jwt.yaml.j2  jwt_authentication_filter.java.j2  jwt_util.java.j2  login_request_dto.java.j2  register_request_dto.java.j2  role_enum.java.j2  security_config.java.j2  user_details_service_impl.java.j2  user_entity.java.j2  user_repository.java.j2
jpio/templates/tests/: controller_test.java.j2  mapper_test.java.j2  repository_test.java.j2  service_test.java.j2
jpio/utils/: console.py  file_helper.py
tests/: test_analyzer.py  test_file_helper.py  test_generator.py  test_security_generator.py  test_test_generator.py  test_writer.py
